# gocql

./: .gitignore  .golangci.yml  AUTHORS  CONTRIBUTING.md  Makefile  NOTICE  README.md  address_translators.go  address_translators_test.go  batch_test.go  cass1batch_test.go  cassandra_only_test.go  cassandra_test.go  client_routes_test.go  client_routes_unit_test.go  cloud_cluster_test.go  cluster.go  cluster_test.go  common_test.go  compressor_test.go  conn.go  conn_test.go  connectionpool.go  connectionpool_test.go  connpicker.go  control.go  control_ccm_test.go  control_integration_test.go  control_test.go  dns_test.go  doc.go  docker-compose.yml  errors_test.go  events.go  events_ccm_test.go  events_test.go  example_batch_test.go  example_lwt_batch_test.go  exec.go  exec_test.go  (+82 more)
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: gpt-5-beast-mode.agent.md
.github/workflows/: Dockerfile  bench-tests.yml  docs-pr.yml  (+7 more)
ci/: clean-old-temporary-docker-images.py  version_fetch.py
debounce/: refresh_debouncer_test.go  simple_debouncer.go  simple_debouncer_test.go
dialer/: utils.go
docs/: Makefile  pyproject.toml
docs/_utils/: redirects.yaml
docs/source/: conf.py  index.rst
events/: event_converter.go  event_converter_test.go  events.go  events_test.go
hostpolicy/: hostpool.go  hostpool_test.go
lz4/: go.mod  go.sum  lz4.go  lz4_test.go
recordings/: 127.0.0.2:19042-32768Reads  127.0.0.2:19042-32768Writes
scyllacloud/: config_test.go  hostdialer_test.go
tablets/: tabets_utils_test.go  tablets.go  tablets_bench_test.go  tablets_test.go
(+155 files in other folders)
